--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker_web: ^2.1.1
+  google_maps_flutter: ^0.5.32
 
   cupertino_icons: ^1.0.2
   flip_card: ^0.6.0
-
-  video_player: ^2.4.8
-  vimeoplayer_trinity: ^0.2.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
